--- a/index.html
+++ b/index.html
@@ -99,32 +99,32 @@
 								<section>
 									<span class="icon solid major fa-compass"></span>
 									<h3>Campaign strategy</h3>
-									<p>We use industry experts, market leading research and analytics to plan end-to-end campaign strategies.</p>
+									<p>We use industry experts and market leading research and analytics to plan end-to-end campaign strategies.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-chart-pie"></span>
 									<h3>Data &amp; analytics</h3>
-									<p>We use data analysis and audience segmentation to provide the essential founding insights on which to build successful campaigns.</p>
+									<p>Our campaigns are built on deep target audience data analysis, delivering tailored insights into audience behaviors and preferences.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>SEO &amp; Programmatic</h3>
-									<p>We work to optimise search rankings organically, with brand-safe strategies and transparent, best-in-class technologies.</p>
+									<h3>Audience analysis &amp; research</h3>
+									<p>We offer social listening and audience segmentation through social media to identify and analyze key communities and stakeholders, optimizing strategies to engage them.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-tv"></span>
-									<h3>Media Planning &amp; buying</h3>
-									<p>We utilise market leading tools to identify relevant media channels and advertising opportunities in market.</p>
+									<h3>Programmatic SEO</h3>
+									<p>Our tools work to grow search engine and social media organic visibility, improving rankings and boosting traffic with strategies designed to enhance your relevance to key search categories.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-table-columns"></span>
-									<h3>Auditing &amp; dashboards</h3>
-									<p>We offer comprehensive audits of your existing media and bespoke reporting solutions.</p>
+									<h3>Media Planning &amp; buying</h3>
+									<p>We bring focused expertise in media planning and buying to online products and a diverse range of offline options. We use market-leading tools and proprietory networks to identify relevant channels in overseas markets. </p>
 								</section>
 								<section>
 									<span class="icon solid major fa-globe"></span>
-									<h3>Customer analysis &amp; research</h3>
-									<p>We leverage our portfolio of market leading industry tools and data to understand diverse audience segments and how to engage them.</p>
+									<h3>Media Auditing</h3>
+									<p>We offer detailed audits of your media buying costs and performance metrics, including comprehensive evaluation of your messaging and its resonance with key audiences.</p>
 								</section>
 							</div>
 						</div>
@@ -136,19 +136,19 @@
 							<h2>Contact us</h2>
 							<p>Feel free to reach out with any queries.</p>
 								<section>
-									<form method="post" action="#">
+									<form method="post" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSd9jRgT-qm71onMiidARmURGgSNHbLHZ0-ftD15DF-5zTmAHw/formResponse">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
-												<input type="text" name="name" id="name" />
+												<input type="text" name="entry.837555573" id="name" />
 											</div>
 											<div class="field half">
 												<label for="email">Email</label>
-												<input type="text" name="email" id="email" />
+												<input type="text" name="emailAddress" id="email" />
 											</div>
 											<div class="field">
 												<label for="message">Message</label>
-												<textarea name="message" id="message" rows="5"></textarea>
+												<textarea name="entry.306607715" id="message" rows="5"></textarea>
 											</div>
 										</div>
 										<ul class="actions">
